# kabekami

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  config.ja.toml  config.toml  kabekami-design.md
crates/kabekami-common/: Cargo.toml
crates/kabekami-common/src/: atomic_write.rs  blur_pad.rs  config.rs  display_mode.rs  i18n.rs  lib.rs
crates/kabekami-config/: Cargo.toml
crates/kabekami-config/src/: main.rs
packaging/aur/kabekami-git/: .SRCINFO  PKGBUILD  kabekami-config.desktop  kabekami.install
src/: blacklist.rs  blur_pad.rs  cache.rs  config.rs  daemon_iface.rs  display_mode.rs  i18n.rs  main.rs  notify.rs  plasma.rs  prefetch.rs  scanner.rs  scheduler.rs  screen.rs  screen_watcher.rs  session.rs  shortcuts.rs  tray.rs  watcher.rs
src/provider/: bing.rs  mod.rs  reddit.rs  unsplash.rs  wallhaven.rs
