[workspace]
members = ["crates/kabekami-common", "crates/kabekami-config"]
resolver = "2"

[package]
name = "kabekami"
version = "0.1.0"
edition = "2021"
description = "KDE Plasma wallpaper rotation tool with Variety-inspired BlurPad display mode"
license = "MIT"

[dependencies]
anyhow = "1"
hex = "0.4.3"
image = "0.25"
kabekami-common = { path = "crates/kabekami-common" }
ksni = "0.3.4"
notify = "7"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
lto = "thin"
codegen-units = 1
