[workspace]
members = ["crates/kabekami-common", "crates/kabekami-config"]
default-members = [".", "crates/kabekami-config"]
resolver = "2"

[package]
name = "kabekami"
version = "0.1.0"
edition = "2021"
description = "KDE Plasma wallpaper rotation tool with Variety-inspired BlurPad display mode"
license = "MIT"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif", "bmp", "tiff", "gif"] }
kabekami-common = { path = "crates/kabekami-common" }
ksni = "0.3.4"
notify = "7"
fastrand = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trash = "5.2.5"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
lto = "thin"
codegen-units = 1
