[workspace]
members = ["crates/kabekami-common", "crates/kabekami-config"]
default-members = [".", "crates/kabekami-config"]
resolver = "2"

# 全クレートで共有する依存。features を 1 箇所に集約することで
# クレート間で feature 集合がズレてビルドが分裂するのを防ぐ。
[workspace.dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[package]
name = "kabekami"
version = "0.1.0"
edition = "2021"
description = "KDE Plasma wallpaper rotation tool with Variety-inspired BlurPad display mode"
license = "MIT"

[dependencies]
anyhow.workspace = true
image.workspace = true
serde.workspace = true
tracing.workspace = true
kabekami-common = { path = "crates/kabekami-common" }
ksni = "0.3.4"
notify = "7"
fastrand = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trash = "5.2.5"
url = "2"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
lto = "thin"
codegen-units = 1
