[package]
name = "kabekami-common"
version = "0.1.0"
edition = "2021"
description = "Shared types and image processing for kabekami"
license = "MIT"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif", "bmp", "tiff", "gif"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
