[package]
name = "kabekami-config"
version = "0.1.0"
edition = "2021"
description = "GUI settings tool for kabekami"
license = "MIT"

[[bin]]
name = "kabekami-config"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
image.workspace = true
eframe = { version = "0.29", default-features = false, features = ["glow", "wayland", "x11", "default_fonts"] }
egui = { version = "0.29", default-features = false, features = ["default_fonts"] }
kabekami-common = { path = "../kabekami-common" }
# ファイル/フォルダ選択ダイアログ。GTK ではなく xdg-desktop-portal 経由で
# 呼び出すことで KDE 環境ではネイティブの KDE ダイアログが使われる。
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
